Fix color contrast at home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
   font-size: 15px;
   border-radius: 50px;
-  background:#9AA6BC;
+  background:#226CF7;
   height: 56px;
   width: 100%;
   overflow: hidden;
